trying to fix borders on mobile

--- a/index.scss
+++ b/index.scss
@@ -15,6 +15,7 @@ body {
     align-items: center;
     flex-direction: column;
     overflow-y: hidden;
+    position: relative;
 }
 
 ul {
@@ -22,20 +23,13 @@ ul {
 }
 
 /* Video */
-.video-container {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
-}
 
 .video {
-    position: absolute;
     height: 100%;
     width: 100%;
+    position: absolute;
+    z-index: -1;
     object-fit: cover;
-    top: 0;
-    left: 0;
 }
 
 .hero-container {
@@ -211,7 +205,7 @@ transform:translateX(-200px);}
     transform:skewY(7deg);}
 50%{opacity:0.8;
     transform:skewY(-2deg);}
-100%{opacity: 0;}
+100%{opacity: 1;}
 
 }
 
